2008-05-14  Michael Natterer  <mitch@imendio.com>

	* glib/gatomic.c: #include "config.h" before using G_ATOMIC_ARM.

2008-05-13  Kjartan Maraas  <kmaraas@gnome.org>

	* glib/gi18n.c: #include <locale.h> to fix the build.

2008-05-12  Yair Hershkovitz  <yairhr@gmail.com>

	* glib/gi18n.c (g_i18n_init): Coding convention fix. Space between
	a function name and its opening parenthesis.

2008-05-12  Tor Lillqvist  <tml@novell.com>

	* glib/glib.symbols: Add g_i18n_init.

2008-05-12  Tor Lillqvist  <tml@novell.com>

	Bug 530457 - G_USER_DIRECTORY_DOWNLOAD folder improperly mapped

	* glib/gutils.c (load_user_special_dirs): When running on Vista or
	later, use SHGetKnownFolderPath() to get the FOLDERID_Downloads
	folder for G_USER_DIRECTORY_DOWNLOAD, and FOLDERID_Public for
	G_USER_DIRECTORY_PUBLIC_SHARE.

2008-05-11  Yair Hershkovitz  <yairhr@gmail.com>

	Bug 503071 - Application direction changes to right to left even if
	theres no translation. 

	* glib/gi18n.c: g_i18n_init() for initializing the glib i18n,
	checking if a translation is available for the calling app. wrappers for
	gettext, dgettext and dpgettext to check first if the application
	should be translated.

	* glib/gi18n.h: symbol declaration for gettext wrappers.

	* glib/gi18n-lib.h: include gi18n.h instead of libintl.h.

	* glib/gstrfuncs.c: moved g_dpgettext() to glib/gi18n.c.

	* glib/gutils.c: use g_dgettext() instead of dgettext().

	* glib/glibintl.h: include gi18n.h.

	* glib.symbols: added gettext wrappers.

	* glib/Makefile.am: added gi18n.c.

2008-05-05  Michael Natterer  <mitch@imendio.com>

	* glib/glib.h: #define __GLIB_H_INSIDE__ around including
	everything.

	* glib/*.h: check for that define instead of __G_LIB_H__ if
	G_DISABLE_SINGLE_INCLUDES is defined.

	* glib/gdatasetprivate.h: #include <glib.h> instead of
	<glib/gdataset.h>

2008-05-02 13:24:13  Tim Janik  <timj@imendio.com>

	* glib/gmain.c: renamed GMainDispatch.dispatching_sources to be more